--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,29 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Raptive Head Tag Manual -->
+    <script data-no-optimize="1" data-cfasync="false">
+      (function (w, d) {
+        w.adthrive = w.adthrive || {};
+        w.adthrive.cmd = w.adthrive.cmd || [];
+        w.adthrive.plugin = "adthrive-ads-manual";
+        w.adthrive.host = "ads.adthrive.com";
+        var s = d.createElement("script");
+        s.async = true;
+        s.referrerpolicy = "no-referrer-when-downgrade";
+        s.src =
+          "https://" +
+          w.adthrive.host +
+          "/sites/68498a5bf7f4d84ba98729cf/ads.min.js?referrer=" +
+          w.encodeURIComponent(w.location.href) +
+          "&cb=" +
+          (Math.floor(Math.random() * 100) + 1);
+        var n = d.getElementsByTagName("script")[0];
+        n.parentNode.insertBefore(s, n);
+      })(window, document);
+    </script>
+    <!-- End of Raptive Head Tag -->
+
     <!-- Meta -->
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/d2.svg" />
@@ -27,6 +50,24 @@
     />
     <meta name="twitter:image" content="https://pd2.tools/d2.png" />
     <title>pd2.tools</title>
+
+    <!-- Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-8T7G5T9H29"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-8T7G5T9H29");
+    </script>
+
+    <!-- Umami Analytics -->
+    <script defer src="https://stats.sapling.capital/touch-the-sky" data-website-id="0a18d18b-07e5-40cd-bc09-bae375e02532"></script>
   </head>
 
   <body style="background-color: #1a1b1e">
