--- a/web/index.html
+++ b/web/index.html
@@ -67,7 +67,11 @@
     </script>
 
     <!-- Umami Analytics -->
-    <script defer src="https://stats.sapling.capital/touch-the-sky" data-website-id="0a18d18b-07e5-40cd-bc09-bae375e02532"></script>
+    <script
+      defer
+      src="https://stats.sapling.capital/touch-the-sky"
+      data-website-id="0a18d18b-07e5-40cd-bc09-bae375e02532"
+    ></script>
   </head>
 
   <body style="background-color: #1a1b1e">
